@startuml curevoo-erd
' Generated by Backend/scripts/diagrams/generate_erd.py from prisma/schema.prisma.
' Do not edit by hand — re-run the generator instead.
!pragma layout smetana

skinparam dpi 150
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 70
skinparam roundCorner 4
hide circle

skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #B9C6C6
  BorderThickness 1
  FontSize 15
  FontStyle bold
  FontColor #2C3E3E
}

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #4E8C86
  BorderThickness 1
  HeaderBackgroundColor #BFE6DC
  FontSize 12
  FontColor #14201F
  AttributeFontSize 11
  AttributeFontColor #24312F
}

skinparam ArrowColor #5A7375
skinparam ArrowFontSize 10
skinparam ArrowFontColor #4A5F61

title CureVoo — Entity Relationship Diagram\n<size:11><color:#5A7375>28 entities · 40 foreign-key relations · generated from prisma/schema.prisma</color></size>

package "Identity & Access" as pkg_8351 #F2F8F7 {
  entity "User" as User {
    **PK** id : string
    --
    **UK** email : string
       passwordHash : string
       role : enum
       name? : string
       phoneNumber? : string
       age? : int
       isEmailVerified : boolean
       deletedAt? : datetime
       createdAt : datetime
       updatedAt : datetime
  }
  entity "PatientProfile" as PatientProfile {
    **PK** id : string
    **FK** userId : string
    --
       fullName? : string
       address? : string
       phoneNumber? : string
       age? : int
       sex? : enum
       medicalHistory? : string
       riskFactors? : json
    **UK** qrCode? : string
       createdAt : datetime
       updatedAt : datetime
  }
  entity "DoctorProfile" as DoctorProfile {
    **PK** id : string
    **FK** userId : string
    --
       fullName? : string
       specialization? : string
       workingAt? : string
       avatar? : string
       languages? : json
       location? : string
       qualifications? : string
       experience? : int
       bio? : string
       photoUrl? : string
    **UK** qrCode? : string
       consultationFee? : decimal
       isActive : boolean
       createdAt : datetime
       updatedAt : datetime
  }
  entity "DoctorAvailableTime" as DoctorAvailableTime {
    **PK** id : string
    **FK** doctorId : string
    --
       dayOfWeek : int
       startTime? : string
       endTime? : string
       isOn : boolean
       createdAt : datetime
       updatedAt : datetime
  }
  entity "DoctorSettings" as DoctorSettings {
    **PK** id : string
    **FK** userId : string
    --
       language : string
       notificationsEnabled : boolean
       createdAt : datetime
       updatedAt : datetime
  }
  entity "OtpCode" as OtpCode {
    **PK** id : string
    **FK** userId : string
    --
       email : string
       otpHash : string
       purpose : enum
       expiresAt : datetime
       attempts : int
       lockedUntil? : datetime
       usedAt? : datetime
       createdAt : datetime
  }
  entity "RefreshTokenSession" as RefreshTokenSession {
    **PK** id : string
    **FK** userId : string
    --
    **UK** jti : string
       userAgent? : string
       ipAddress? : string
       expiresAt : datetime
       revokedAt? : datetime
       replacedByJti? : string
       revokeReason? : string
       createdAt : datetime
       updatedAt : datetime
  }
}

package "Doctor–Patient Relationships" as pkg_1943 #F4F7FB {
  entity "DoctorPatientLink" as DoctorPatientLink {
    **PK** id : string
    **FK** doctorUserId : string
    **FK** patientUserId : string
    --
       status : enum
       createdByDoctor : boolean
       createdAt : datetime
       updatedAt : datetime
  }
  entity "DoctorConnectionRequest" as DoctorConnectionRequest {
    **PK** id : string
    **FK** doctorUserId : string
    **FK** patientUserId : string
    --
       status : enum
       createdAt : datetime
       updatedAt : datetime
       respondedAt? : datetime
  }
  entity "CreatedPatient" as CreatedPatient {
    **PK** id : string
    **FK** doctorUserId : string
    --
       sourcePatientUserId? : string
       fullName? : string
       phoneNumber? : string
       age? : int
       sex? : enum
       medicalHistory? : string
       riskFactors? : json
       createdAt : datetime
  }
  entity "PatientDeletionRequest" as PatientDeletionRequest {
    **PK** id : string
    **FK** patientUserId : string
    **FK** doctorUserId : string
    --
       status : enum
       createdAt : datetime
       resolvedAt? : datetime
  }
  entity "Notification" as Notification {
    **PK** id : string
    **FK** userId : string
    --
       type : enum
       title : string
       message : string
       payload? : json
       isRead : boolean
       createdAt : datetime
  }
}

package "Clinical Records" as pkg_4392 #F7F6FB {
  entity "Appointment" as Appointment {
    **PK** id : string
    **FK?** patientUserId : string
    **FK?** createdPatientId : string
    **FK** doctorUserId : string
    --
       scheduledAt : datetime
       appointmentEnd? : datetime
       reason? : string
       notes? : string
       status : enum
       canceledAt? : datetime
       createdAt : datetime
       updatedAt : datetime
  }
  entity "TreatmentPlan" as TreatmentPlan {
    **PK** id : string
    **FK** doctorUserId : string
    **FK?** patientUserId : string
    **FK?** createdPatientId : string
    --
       symptomsLog? : json
       treatmentPlan? : json
       createdAt : datetime
       updatedAt : datetime
  }
  entity "SymptomLog" as SymptomLog {
    **PK** id : string
    **FK** treatmentPlanId : string
    --
       symptomType? : string
       symptomDetails? : string
       notes? : string
       logDate : datetime
  }
  entity "TreatmentRecord" as TreatmentRecord {
    **PK** id : string
    **FK** patientUserId : string
    --
       curevooDetectorResult? : string
       record? : string
       createdAt : datetime
       updatedAt : datetime
  }
  entity "CancerTest" as CancerTest {
    **PK** id : string
    **FK** patientUserId : string
    --
       testDate : datetime
       result? : string
       testEnteredData? : json
       createdAt : datetime
  }
  entity "TestRecord" as TestRecord {
    **PK** id : string
    **FK** patientUserId : string
    --
       recordDate : datetime
       recordTitle? : string
       testRecordData? : json
       createdAt : datetime
  }
  entity "CancerResistance" as CancerResistance {
    **PK** id : string
    **FK** patientUserId : string
    **FK?** testRecordId : string
    --
       numberOfRecords : int
       aiResult? : string
       lastAdd? : datetime
       createdAt : datetime
  }
  entity "MedicalHistory" as MedicalHistory {
    **PK** id : string
    **FK?** patientUserId : string
    **FK?** createdPatientId : string
    --
       record? : json
       createdAt : datetime
       updatedAt : datetime
  }
  entity "MedicalHistoryUpdateRequest" as MedicalHistoryUpdateRequest {
    **PK** id : string
    **FK** medicalHistoryId : string
    **FK** doctorUserId : string
    **FK?** patientUserId : string
    --
       proposedRecord : json
       status : enum
       createdAt : datetime
       updatedAt : datetime
       respondedAt? : datetime
  }
}

package "AI Prediction Runs" as pkg_9740 #FBF6F2 {
  entity "AiNsclcPredictionRun" as AiNsclcPredictionRun {
    **PK** id : string
    **FK** patientId : string
    **FK** doctorId : string
    --
       predictionVersion? : string
       requestPayloadJson : json
       responseJson? : json
       summaryText? : string
       earlyFailureProbability? : float
       earlyFailureRiskLevel? : string
       durableBenefitProbability? : float
       durableBenefitRiskLevel? : string
       interpretationSummary? : string
       llmExplanationEnabled : boolean
       status : string
       errorMessage? : string
       createdAt : datetime
  }
  entity "AiNsclcPredictionRunCreated" as AiNsclcPredictionRunCreated {
    **PK** id : string
    **FK** createdPatientId : string
    **FK** doctorId : string
    --
       predictionVersion? : string
       requestPayloadJson : json
       responseJson? : json
       summaryText? : string
       earlyFailureProbability? : float
       earlyFailureRiskLevel? : string
       durableBenefitProbability? : float
       durableBenefitRiskLevel? : string
       interpretationSummary? : string
       llmExplanationEnabled : boolean
       status : string
       errorMessage? : string
       createdAt : datetime
  }
}

package "Support & Knowledge" as pkg_7379 #F5FAF5 {
  entity "PsychologicalChatSession" as PsychologicalChatSession {
    **PK** id : string
    **FK** patientId : string
    --
       gracePatientId? : string
       sessionId? : string
       redirectUrl? : string
       createdAt : datetime
       updatedAt : datetime
  }
  entity "PsychologicalChatMessage" as PsychologicalChatMessage {
    **PK** id : string
    **FK** patientId : string
    **FK?** chatSessionId : string
    --
       sessionId? : string
       sender : enum
       message : string
       createdAt : datetime
  }
  entity "PsychologicalExerciseLog" as PsychologicalExerciseLog {
    **PK** id : string
    **FK** patientId : string
    --
       exerciseType : enum
       durationMinutes? : int
       completedAt : datetime
  }
  entity "EducationalSearchLog" as EducationalSearchLog {
    **PK** id : string
    **FK** patientId : string
    --
       question : string
       answerSummary? : string
       safetyStatus : enum
       createdAt : datetime
  }
  entity "KnowledgeArticle" as KnowledgeArticle {
    **PK** id : string
    --
       title : string
    **UK** slug : string
       category : enum
       summary : string
       content : string
       sources? : json
       language : string
       readingTimeMinutes? : int
       isPublished : boolean
       createdAt : datetime
       updatedAt : datetime
  }
}

User ||--|{ PatientProfile : "userId"
User ||--|{ DoctorProfile : "userId"
DoctorProfile ||--|{ DoctorAvailableTime : "doctorId"
User ||--|{ DoctorSettings : "userId"
User ||--|{ OtpCode : "userId"
User ||--|{ RefreshTokenSession : "userId"
User ||--|{ DoctorPatientLink : "doctorUserId"
User ||--|{ DoctorPatientLink : "patientUserId"
User ||--|{ DoctorConnectionRequest : "doctorUserId"
User ||--|{ DoctorConnectionRequest : "patientUserId"
User ||--|{ CreatedPatient : "doctorUserId"
User ||--|{ PatientDeletionRequest : "patientUserId"
User ||--|{ PatientDeletionRequest : "doctorUserId"
User ||--|{ Notification : "userId"
User ||--o{ Appointment : "patientUserId"
CreatedPatient ||--o{ Appointment : "createdPatientId"
User ||--|{ Appointment : "doctorUserId"
User ||--|{ TreatmentRecord : "patientUserId"
User ||--|{ TreatmentPlan : "doctorUserId"
User ||--o{ TreatmentPlan : "patientUserId"
CreatedPatient ||--o{ TreatmentPlan : "createdPatientId"
TreatmentPlan ||--|{ SymptomLog : "treatmentPlanId"
User ||--|{ CancerTest : "patientUserId"
User ||--|{ TestRecord : "patientUserId"
User ||--|{ CancerResistance : "patientUserId"
TestRecord ||--o{ CancerResistance : "testRecordId"
User ||--o{ MedicalHistory : "patientUserId"
CreatedPatient ||--o{ MedicalHistory : "createdPatientId"
MedicalHistory ||--|{ MedicalHistoryUpdateRequest : "medicalHistoryId"
User ||--|{ MedicalHistoryUpdateRequest : "doctorUserId"
User ||--o{ MedicalHistoryUpdateRequest : "patientUserId"
User ||--|{ AiNsclcPredictionRun : "patientId"
User ||--|{ AiNsclcPredictionRun : "doctorId"
CreatedPatient ||--|{ AiNsclcPredictionRunCreated : "createdPatientId"
User ||--|{ AiNsclcPredictionRunCreated : "doctorId"
User ||--|{ PsychologicalChatSession : "patientId"
User ||--|{ PsychologicalChatMessage : "patientId"
PsychologicalChatSession ||--o{ PsychologicalChatMessage : "chatSessionId"
User ||--|{ PsychologicalExerciseLog : "patientId"
User ||--|{ EducationalSearchLog : "patientId"

@enduml
